Fix: the text box didn't appear correctly on Safari browser.

--- a/BlazingStory/Internals/Components/Inputs/TextArea.razor.scss
+++ b/BlazingStory/Internals/Components/Inputs/TextArea.razor.scss
@@ -1,5 +1,6 @@
 .text-area-container {
     position: relative;
+    display: block;
 
     textarea, .text-area-shadow {
         max-height: 400px;
